--- a/core/static/css/_mixins.scss
+++ b/core/static/css/_mixins.scss
@@ -36,7 +36,6 @@
 
 @mixin inline-list($color, $font-size:12px){
   ul{
-      display: inline-block;
       margin: 0px;
       padding: 0px;
       li{
